--- a/Project/animation.css
+++ b/Project/animation.css
@@ -29,13 +29,29 @@ h2{
 
 
 }
+h2::before
+{
+    content: '';
+    position: absolute;
+    left:120% ;
+    width: 120%;
+    height: 100%;
+    background: linear-gradient(90deg,transparent 0%,#000 5%,#000 100%);
+    animation: animate 5.5 linear forwards;
+    
+}
+h2 span{
+    color: cyan;
+}
 @keyframes animate{
 
     0%{
+        left: 110%;
         color: cyan;;
         text-shadow: blanchedalmond;
     }
     100%{
+        left: -20%;
 
         color: #ffff;
         text-shadow: 0 0 10px aqua,
